<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="register_message">Le premier bien immobilier enregistré vaut </string>
    <string name="username_placeholder">Eliran Elbaz</string>
    <string name="email_placeholder">eelbaz012@gmail.com</string>

    <!--Used in navigation drawer-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="drawer_map_activity_link">Map View</string>
    <string name="drawer_loan_simulator_link">Loan Simulator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- MainActivity-->

    <!--  List item  -->
    <string name="item_type_text">Type</string>
    <string name="item_location_text">Location</string>
    <string name="item_price_text">Price</string>

    <!--AddFragment EditFragment -->
    <string name="sold_button_text">Sold</string>
    <string name="back_on_sale_button_text">Available</string>

    <!--DetailFragment -->
    <string name="detail_title_description">Description</string>
    <string name="detail_title_surface">Surface</string>
    <string name="detail_title_n_of_rooms">Number of rooms</string>
    <string name="detail_title_n_of_bedrooms">Number of Bedrooms</string>
    <string name="detail_title_n_of_bathrooms">Number of Bathrooms</string>
    <string name="detail_location">Location</string>
    <string name="detail_price">Price</string>
    <string name="detail_agent">Agent in charge</string>
    <string name="detail_status">Property status</string>
    <string name="detail_poi">Points of interest</string>
    <string name="detail_sold">Sold on: %1$s</string>
    <string name="detail_available">Available since: %1$s</string>
    <string name="title_activity_maps">Map</string>

    <!-- Permissions-->
    <string name="popup_title_permission_disk_access">This application requires authorization to read/write the storage on this device</string>

    <string name="splash_loading_text">Loading&#8230;</string>

    <!-- Action Fragments-->
    <string name="add_property_button">Save</string>
    <string name="search_property_button">Search</string>
    <string name="add_property_fragment_title">Add New Property</string>
    <string name="edit_property_fragment_title">Edit Property</string>
    <string name="search_property_fragment_title">Search Properties</string>
    <string name="search_property_bottom_sheet_title">Search Property</string>
    <string name="map_bottom_sheet_title">Map View</string>

    <string name="alert_dialog_title">Cancel entry</string>
    <string name="alert_dialog_message">Are you sure you want to cancel? Your recent changes will be lost!</string>
    <string name="alert_delet_image_title">Delete Image ?</string>


    <string name="empty_description_alert_dialog">N/A</string>

    <!-- Map Fragment -->
    <string name="alert_no_internet_dialog_title">No Network</string>
    <string name="alert_no_internet_dialog_message">Internet connection is necessary for the Map to function!</string>
    <string name="popup_title_permission_location_access">This application needs permissions of location to function correctly.</string>
    <string name="popup_title_permission_gps_access">This application requires to enabled GPS, do you want to enable it?</string>
    <string name="popup_title_permission_gps_enable_btn">Enable</string>
    <string name="map_loading_text">Waiting for your current location</string>

    <!-- SnackBars -->
    <string name="add_property_success">Successfully updated your entry</string>
    <string name="edit_property_success">Successfully updated your entry</string>
    <string name="search_property_fail">We couldn\'t find any results. Please try different search criteria</string>


    <!-- Debug original Java files -->
    <string name="premier_bien">Le premier bien immobilier enregistré vaut</string>

    <!-- Mortgage -->
    <string name="mortgage_title">Mortgage Simulator</string>
    <string name="loan_value_seekBar">Loan Value (USD): %1$s</string>
    <string name="loan_duration_seekBar">Duration (years): %1$s</string>
    <string name="loan_interest_rate">Interest rate: %1$s%%</string>
    <string name="your_monthly_rate_text">Your rate:</string>
    <string name="monthly_rate">%1$s</string>
    <string name="dollar_month">/month</string>


</resources>
